# pocket-tts.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  download_models.bat  download_models.sh
.github/workflows/: node-addon-prebuilds.yml
bindings/node/: README.md  binding.gyp  index.js  package-lock.json  package.json
bindings/node/scripts/: gyp-paths.js
bindings/node/src/: addon.cpp
include/pocket_tts/: audio_utils.hpp  pocket_tts.hpp  pocket_tts_c.h  tokenizer.hpp
src/: audio_utils.cpp  main.cpp  pocket_tts.cpp  pocket_tts_c.cpp  tokenizer.cpp
test/: PocketTTS.cs  StreamingExample.cs  StreamingExample.csproj  test_api.c  test_api.py  test_streaming.cpp
